# auto-algo-trading

./: README.md  pyproject.toml
autotrader_python/: runfile.py
autotrader_python/config/: macd.yaml
autotrader_python/strategies/: macd.py
